--- a/app/views/deals/_body_bestdeals.html.erb
+++ b/app/views/deals/_body_bestdeals.html.erb
@@ -73,6 +73,185 @@
 </div> 
 -->
 
+<div class="card clearfix" data-score="50" data-price="49.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2InWpb7"><img src="https://m.media-amazon.com/images/I/71uWWF7o9vL._AC_UL436_.jpg" alt="iPad Air 2 Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2InWpb7">Logitech Type+ Protective iPad Air 2 (ONLY) Case with Integrated Keyboard – Two Viewing Positions – Designed for Typing and Tapping</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$49.99</span><span class="ori_price">$99.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2InWpb7">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="23.97">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WoB4Ix"><img src="https://m.media-amazon.com/images/I/915-OrYd+wL._AC_UL436_.jpg" alt="Gaming Headset" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WoB4Ix">Turtle Beach Recon Camo Multiplatform Gaming Headset for Xbox One, PS4, PC, Mac, & Mobile</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$23.97</span><span class="ori_price">$59.95</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WoB4Ix">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="37.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/318lRtU"><img src="https://m.media-amazon.com/images/I/81N5fTcMsPL._AC_UL436_.jpg" alt="Desktop Memory" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/318lRtU">Corsair CMZ8GX3M1A1600C10 Vengeance 8GB (1x8GB) DDR3 1600 MHz (PC3 12800) Desktop Memory 1.5V</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$37.99</span><span class="ori_price">$78.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/318lRtU">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="54" data-price="64.88">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JYIEDa"><img src="https://m.media-amazon.com/images/I/71vyZdq-60L._AC_UL436_.jpg" alt="Fitness/Activity Tracker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>54% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JYIEDa">Garmin vívosmart 3, Fitness/Activity Tracker with Smart Notifications and Heart Rate Monitoring, Black ,Small-Medium</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$64.88</span><span class="ori_price">$139.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JYIEDa">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WfTZk3"><img src="https://m.media-amazon.com/images/I/810p4fIuvOL._AC_UL436_.jpg" alt="Screen Protector" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WfTZk3">ZAGG InvisibleShield HDX Screen Protector - HD Clarity + Extreme Shatter Protection for Apple iPad Pro 9.7 / iPad Air 2 / iPad Air</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$13.99</span><span class="ori_price">$39.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WfTZk3">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WqpY5H"><img src="https://m.media-amazon.com/images/I/51iTX-YFdgL._AC_UL436_.jpg" alt="MagicMount" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WqpY5H">SCOSCHE MAG12VB MagicMount Magnetic Phone/GPS Power Outlet Mount for the Car in Frustration Free Packaging</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$14.99</span><span class="ori_price">$17.66</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WqpY5H">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="35.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Im3Hwg"><img src="https://m.media-amazon.com/images/I/81OMtowJ8WL._AC_UL436_.jpg" alt="Galaxy Tab S4 Book Cover" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Im3Hwg">Samsung Electronics EF-BT830PBEGUJ Galaxy Tab S4 Book Cover, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$35.00</span><span class="ori_price">$69.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Im3Hwg">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="57" data-price="89.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WoBUFb"><img src="https://m.media-amazon.com/images/I/61jhgzpoZJL._AC_UL436_.jpg" alt="Laser Printer" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>57% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WoBUFb">Xerox Phaser 3260/DNI Monchrome Laser Printer - Wireless</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$89.00</span><span class="ori_price">$209.00</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WoBUFb">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="59" data-price="31.71">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WfV7UP"><img src="https://m.media-amazon.com/images/I/81Mbn8ZrjbL._AC_UL436_.jpg" alt="Split Design Wired Keyboard" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>59% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WfV7UP">Fellowes Microban Split Design Wired Keyboard, Dark Gray - FEL98915</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$31.71</span><span class="ori_price">$77.49</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WfV7UP">Shop Now</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="179.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ipv20z"><img src="https://m.media-amazon.com/images/I/41tW6Kpw1xL._AC_UL436_.jpg" alt="Corsair Vengeance LPX 32GB DDR4" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ipv20z">Corsair Vengeance LPX 32GB DDR4 3200 C16 for Intel 100 Series - White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price bestdeals">$179.99</span><span class="ori_price">$444.99</span></address>
+      <em>*Pricing may change and deals can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ipv20z">Shop Now</a>
+  </div>
+</div>
 
 <div class="card clearfix" data-score="50" data-price="discounted_price">
   <div class="image_box">
