--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -35,6 +35,234 @@
  </div>
 -->
 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ik6yWA"><img src="https://m.media-amazon.com/images/I/611+9+TSvGL._SR400,400_.jpg" alt="Penlaser Digital Mini Laser" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ik6yWA">Penlaser Digital Mini Laser Distance Meter Measure Pen With Laser Pointer, Packed in PU Case, For Home DIY</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span></address>
+      <p><span>Take <strong>50% off at $29.99</strong> with promo code: <strong>505A4HD1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ik6yWA">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="100.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2WhP8yL"><img src="https://images-na.ssl-images-amazon.com/images/I/71%2BHIwbVvuL._SX522_.jpg" alt="3D Hologram Fan" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2WhP8yL">12 Inch (30cm) Portable 3D Hologram Fan Photo & HD Video LED Holographic Display for Home,Office,Entertainment and Shops,Remote Control 160 Degree Wide Viewing Angle</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$100.00</span><span class="ori_price">$199.99</span></address>
+      <p><span>Take <strong>50% off at $199.99</strong> with promo code: <strong>506YP6BL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 15, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2WhP8yL">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="3.79">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JXRv89"><img src="https://m.media-amazon.com/images/I/71FwP7IdcnL._SR400,400_.jpg" alt="Compatible iPhone x/iPhone 10 Case" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JXRv89">Compatible iPhone x/iPhone 10 Case Waterproof,Blue(5.8 inch)</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$3.79</span><span class="ori_price">$18.95</span></address>
+      <p><span>Take <strong>80% off at $18.95</strong> with promo code: <strong>80OKZVUL</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 20, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JXRv89">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="13.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2We2vQh"><img src="https://m.media-amazon.com/images/I/71uSUxv0GvL._SR400,400_.jpg" alt="Gogloo Foot Rest Under Desk" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2We2vQh">Gogloo Foot Rest Under Desk | Foot Stool for Work at Office and Home(Footrest for Desk), Ergonomic Design, Height Adjustable</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.49</span><span class="ori_price">$26.99</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>50% off at $26.99</strong> with promo code: <strong>50TEM53J</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 23, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2We2vQh">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="10.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Wg56cK"><img src="https://m.media-amazon.com/images/I/91ea8Fc+5gL._SR400,400_.jpg" alt="Phone Camera Lens" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Wg56cK">Phone Camera Lens,11 in 1 Cell Phone Lens Kit for iPhone and Android, 0.36X Wide Angle Lens+198°Fisheye Lens+20X Macro Lens</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.40</span><span class="ori_price">$25.99</span></address>
+      <p><span>Take <strong>60% off at $25.99</strong> with promo code: <strong>60VS2SU1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 28, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Wg56cK">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="26.23">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2JZ2JsV"><img src="https://m.media-amazon.com/images/I/71HBDoMR9iL._SR400,400_.jpg" alt="Aicok Ice Cream Maker" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2JZ2JsV">Aicok Ice Cream Maker, Frozen Yogurt and Sorbet Machine BPA Free with Timer Function, Easy Homemade Ice Cream</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$26.23</span><span class="ori_price">$34.98</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>25% off at $34.98</strong> with promo code: <strong>257FN8DJ</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 09, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2JZ2JsV">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="62.30">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ETs1EW"><img src="https://m.media-amazon.com/images/I/91NsXlrl9XL._SR400,400_.jpg" alt="Inala Weighted Blanket" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ETs1EW">Inala Weighted Blanket Adult 15 lbs, Patented Weight Distribution, Luxury Queen Size 60"x80", Weighted Comforter</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$62.30</span><span class="ori_price">$89.00</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>30% off at $89.00</strong> with promo code: <strong>30INALASALE</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2ETs1EW">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="62" data-price="41.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31bubcj"><img src="https://m.media-amazon.com/images/I/71htUZUYnML._SR400,400_.jpg" alt="Air Purifiers" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>62% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31bubcj">Darlingcare Air Purifiers for Allergies and Pets, 28”3-in-1 Large Room True HEPA Filter Air Purifier, Smoke Odor Eliminator for Home </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$41.80</span><span class="ori_price">$109.99</span></address>
+      <p><span>Take <strong>62% off at $109.99</strong> with promo code: <strong>62H4P334</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 16, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31bubcj">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="28.65">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31awdt8"><img src="https://m.media-amazon.com/images/I/51AJvjgK-PL._SR400,400_.jpg" alt="Wireless Earbuds CHISANA C1L" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31awdt8">Wireless Earbuds CHISANA C1L – Bluetooth Headphones Extreme Subwoofer Bass True Wireless Earbuds w/Dual Microphones | Bluetooth 5.0, IPX7 Waterproof</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.65</span><span class="ori_price">$47.75</span>
+        <div class="tooltip_green">
+          <span>Double Discount</span>
+          <div class="tooltip-content">
+            <p>You can get extra discount by applying promotional code and get additional discount by applying coupon on the detail page of product.</p>
+          </div>
+         </div>
+      </address>
+      <p><span>Take <strong>40% off at $47.75</strong> with promo code: <strong>40TJ15P1</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 05, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/31awdt8">Use Code</a>
+  </div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Ijeszi"><img src="https://m.media-amazon.com/images/I/51Wq6B4BOGL._SR400,400_.jpg" alt="Bluetooth 5.0 Wireless Earbuds" /></a>
+  </div>
+  <div class="inner">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Ijeszi">Bluetooth 5.0 Wireless Earbuds, Moucit Sport Bluetooth Earphone Easy-Pair Sweatproof Mini in-Ear Headphone</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.50</span><span class="ori_price">$48.99</span></address>
+      <p><span>Take <strong>50% off at $48.99</strong> with promo code: <strong>50M3QAH5</strong></span></p>
+      <span class="ex_date">Expiration Date : Jun 30, 2019 at 11:59 PM PDT</span>
+      <em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn">
+    <a target="_blank" href="https://amzn.to/2Ijeszi">Use Code</a>
+  </div>
+</div>
+
 <div class="card clearfix" data-score="40" data-price="5.39">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2Ip5C3f"><img src="https://m.media-amazon.com/images/I/61g0SnDDGeL._SR400,400_.jpg" alt="Hausbell Flashlights" /></a>
