--- a/app/views/gadgets/edit.html.erb
+++ b/app/views/gadgets/edit.html.erb
@@ -12,7 +12,8 @@
          </div>
 
          <div class="form_input">
-          <%= f.input :gg_from, label: 'Source' %>
+          <%= f.input :gg_from, label: 'Seller' %>
+          <%= f.input :gg_spare_01, label: 'Retailer' %>
           <%= f.input :gg_title, label: 'Title' %>
           <%= f.input :gg_intro, label: 'Intro' %>
           <%= f.input :gg_img, label: 'Image URL' %>
