--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -107,5 +107,38 @@
   .form_border{width:100%;}
 }
 
+.show_wrap{margin-top:100px;}
+.show_wrap .show_box{width:1000px;margin:0 auto;font-family: 'Montserrat', sans-serif;font-weight:600;box-shadow:0px 13px 40px -24px rgba(0,0,0,0.15)}
+.show_wrap .show_box .show_img{float:left;width:44%;margin:5% 2%;}
+.show_wrap .show_box .show_img img{width:80%;}
+.show_wrap .show_box .show_inner{float:left;width:48%;margin: 4% 0 10% 2%;}
+.show_wrap .show_box .show_inner h2{font-size:30px;}
+.show_wrap .show_box .show_inner strong{text-transform:uppercase;font-size:17px;color:#616161;letter-spacing:5px;border-bottom:1px solid #616161;}
+.show_wrap .show_box .show_inner span{}
+.show_wrap .show_box .show_inner span p{font-size:15px;font-weight:400px;}
+.show_wrap .show_box .show_inner p{margin:25px 0;font-size:20px;}
+.show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
+.show_wrap .show_box .show_inner a em{color:#e47911;}
+
+@media screen and (max-width:680px){
+  .show_wrap{margin:60px 0 100px 0;}
+  .show_wrap .show_box{width:100%;margin:0;box-shadow:none;}
+  .show_wrap .show_box .show_img{float:none;width:75%;margin:0 auto;}
+  .show_wrap .show_box .show_img img{width:100%;}
+  .show_wrap .show_box .show_inner{float:none;width:100%;margin-left:0;}
+  .show_wrap .show_box .show_inner h2{font-size:20px;}
+  .show_wrap .show_box .show_inner strong{font-size:15px;}
+  .show_wrap .show_box .show_inner span p{font-size:13px;}
+}
+
+@media screen and (min-width:681px) and (max-width:1199px){
+  .show_wrap{margin-top:80px;}
+  .show_wrap .show_box{width:100%;}
+  .show_wrap .show_box .show_inner h2{font-size:20px;}
+  .show_wrap .show_box .show_inner strong{font-size:15px;}
+  .show_wrap .show_box .show_inner span p{font-size:13px;}
+  .show_wrap .show_box{width:100%;}
+}
+
 
 
