--- a/app/views/shared/_header_short.html.erb
+++ b/app/views/shared/_header_short.html.erb
@@ -1,6 +1,9 @@
 <header class="header_short clearfix">
   <div class="wrap">
-    <button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>
+    <!--<button class="gnb_open2"><img src="<%=asset_path 'more_black.png' %>" alt="open mobile menu" /></button>-->
+    <!--<div class="back_to">-->
+    <!--  <a href="/"><img src="<%=asset_path 'back.png' %>"></a>-->
+    <!--</div>-->
     <div class="gnb_pc clearfix">
       <a href="/"><img class="oh_logo" src="<%=asset_path 'oh_logo.jpg' %>" alt="ohigottabuythis" /></a>
 
