--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -14,7 +14,7 @@
            <span><p><%= @gadget.gg_intro %></p></span>
          <% end %>
          <p>$<%= @gadget.gg_aprice %></p>
-         <a href="#n">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
+         <a href="<%= @gadget.gg_url %>">Check it out on <em><%= @gadget.gg_spare_01 %></em></a>
          <!-- <div class="option_btn">
            <a href="/gadgets?category=Tech">See More Tech</a>
          </div> -->
