--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -121,10 +121,10 @@
 .show_wrap .show_box .show_inner a em{color:#e47911;}
 
 @media screen and (max-width:680px){
-  .show_wrap{margin:60px 0 100px 0;}
+  .show_wrap{margin:100px 0 50px 0;}
   .show_wrap .show_box{width:100%;margin:0;box-shadow:none;}
-  .show_wrap .show_box .show_img{float:none;width:75%;margin:0 auto;}
-  .show_wrap .show_box .show_img img{width:100%;}
+  .show_wrap .show_box .show_img{float:none;width:100%;margin:0 auto;}
+  .show_wrap .show_box .show_img img{width:100%;border-radius:10px;}
   .show_wrap .show_box .show_inner{float:none;width:100%;margin-left:0;}
   .show_wrap .show_box .show_inner h2{font-size:20px;}
   .show_wrap .show_box .show_inner strong{font-size:15px;}
