--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -122,6 +122,15 @@
 .show_wrap .show_box .show_inner a{text-decoration:none;color:#fff;background:#000;padding:15px 30px;display:inline-block;}
 .show_wrap .show_box .show_inner a em{color:#e47911;}
 
+.show_wrap .show_box_down{width:1000px;margin:60px auto 200px auto;}
+.show_wrap .show_box_down .sbd_box{float:left;width:23%;margin:0 1%;}
+.show_wrap .show_box_down .sbd_box .down_img{width:100%;height:200px;}
+.show_wrap .show_box_down .sbd_box .down_img img{width:100%;height:100%;object-fit:cover;}
+.show_wrap .show_box_down .sbd_box .down_inner{padding:5px;}
+.show_wrap .show_box_down .sbd_box .down_inner p{}
+.show_wrap .show_box_down .sbd_box .down_inner p a{text-decoration:none;color:#616161;}
+
+
 @media screen and (max-width:680px){
   .show_wrap{margin:100px 0 50px 0;}
   .show_wrap .show_box{width:100%;margin:0;box-shadow:none;}
@@ -131,6 +140,10 @@
   .show_wrap .show_box .show_inner h2{font-size:20px;}
   .show_wrap .show_box .show_inner strong{font-size:15px;}
   .show_wrap .show_box .show_inner span p{font-size:13px;}
+
+  .show_wrap .show_box_down{width:100%;margin:0;}
+  .show_wrap .show_box_down .sbd_box{float:left;width:48%;margin:0 1%;}
+  .show_wrap .show_box_down .sbd_box .down_img{height:175px;}
 }
 
 @media screen and (min-width:681px) and (max-width:1199px){
@@ -140,6 +153,9 @@
   .show_wrap .show_box .show_inner strong{font-size:15px;}
   .show_wrap .show_box .show_inner span p{font-size:13px;}
   .show_wrap .show_box{width:100%;}
+
+  .show_wrap .show_box_down{width:100%;margin:60px auto 200px auto;}
+  .show_wrap .show_box_down .sbd_box .down_img{height:175px;}
 }
 
 
