--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -27,6 +27,21 @@
         <% end %>  
 
       </div>
+
+      <!-- <div class="show_box_down clearfix">
+        <% @relative_sub_category.shuffle.take(4).each do |subcategory| %>
+          <% if subcategory.subcategory_id == @gadget.subcategory_id %>
+            <div class="sbd_box">
+              <div class="down_img">
+                <%= link_to (image_tag subcategory.gg_img), subcategory %>
+              </div>
+              <div class="down_inner">
+                <p><%= link_to subcategory.gg_title, subcategory %></p>
+              </div>
+            </div>
+          <% end %>
+        <% end %>
+      </div> -->
       
     </div>
   </div>
